Updated spark images to 2.3.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 #              SPARK CLUSTER                #
 #############################################
   spark-master:
-    image: bde2020/spark-master:2.2.0-hadoop2.7
+    image: bde2020/spark-master:2.3.0-hadoop2.7
     container_name: spark-master
     expose:
       - "7077"
@@ -13,10 +13,10 @@ services:
       - "7077:7077"
     environment:
       - INIT_DAEMON_STEP=setup_spark
-    volumes:
-      - ./spark:/spark
+#    volumes:
+#      - ./spark:/spark
   spark-worker-1:
-    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    image: bde2020/spark-worker:2.3.0-hadoop2.7
     container_name: spark-worker-1
     depends_on:
       - spark-master
@@ -25,7 +25,7 @@ services:
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
   spark-worker-2:
-    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    image: bde2020/spark-worker:2.3.0-hadoop2.7
     container_name: spark-worker-2
     depends_on:
       - spark-master
