--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - "7077:7077"
     environment:
       - INIT_DAEMON_STEP=setup_spark
-#    volumes:
-#      - ./spark:/spark
+    volumes:
+      - ./spark:/spark
   spark-worker-1:
     image: bde2020/spark-worker:2.3.0-hadoop2.7
     container_name: spark-worker-1
